--- a/frameworks/mpvue/runtime/package.json
+++ b/frameworks/mpvue/runtime/package.json
@@ -23,11 +23,11 @@
     "build": "node build/build.js wx"
   },
   "dependencies": {
-    "mpvue": "^2.0.0",
-    "stylus": "^0.54.7",
-    "stylus-loader": "^3.0.2"
+    "mpvue": "^2.0.0"
   },
   "devDependencies": {
+    "stylus": "^0.54.7",
+    "stylus-loader": "^3.0.2",
     "babel-core": "^6.22.1",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.22.0",
