--- a/frameworks/wepy2/runtime/package.json
+++ b/frameworks/wepy2/runtime/package.json
@@ -17,9 +17,7 @@
   "license": "MIT",
   "dependencies": {
     "@wepy/core": "^2.0.0-alpha.9",
-    "miniprogram-slide-view": "0.0.3",
-    "stylus": "^0.54.7",
-    "wepy-compiler-stylus": "^1.3.12"
+    "miniprogram-slide-view": "0.0.3"
   },
   "devDependencies": {
     "@wepy/cli": "^2.0.0-alpha.20",
