--- a/frameworks/kbone/runtime/package.json
+++ b/frameworks/kbone/runtime/package.json
@@ -9,12 +9,8 @@
     "mp"
   ],
   "scripts": {
-    "start": "npm run mp",
-    "web": "cross-env NODE_ENV=development webpack-dev-server --inline --progress --config build/webpack.dev.config.js",
-    "mp": "cross-env NODE_ENV=development webpack --config build/webpack.mp.config.js --progress --hide-modules",
-    "lint": "eslint --ext .js,.vue src --fix",
-    "build": "rimraf dist/web && cross-env NODE_ENV=production webpack --config build/webpack.prod.config.js --progress --hide-modules",
-    "build:mp": "cross-env NODE_ENV=production webpack --config build/webpack.mp.config.js --progress --hide-modules"
+    "dev": "cross-env NODE_ENV=development webpack --config build/webpack.mp.config.js --progress --hide-modules",
+    "build": "cross-env NODE_ENV=production webpack --config build/webpack.mp.config.js --progress --hide-modules"
   },
   "dependencies": {
     "vue": "^2.5.2",
