--- a/frameworks/mpx/runtime/package.json
+++ b/frameworks/mpx/runtime/package.json
@@ -11,18 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "@mpxjs/api-proxy": "^2.3.0",
-    "@mpxjs/core": "^2.4.0"
+    "@mpxjs/core": "^2.5.3"
   },
   "devDependencies": {
-    "copy-webpack-plugin": "^5.0.3",
-    "@mpxjs/webpack-plugin": "^2.4.1",
+    "@mpxjs/webpack-plugin": "^2.5.3",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.4",
-    "babel-runtime": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-runtime": "^6.26.0",
     "chalk": "^2.3.2",
+    "copy-webpack-plugin": "^5.0.3",
     "css-loader": "^0.28.11",
     "file-loader": "^1.1.11",
     "html-loader": "^0.5.5",
@@ -33,8 +33,8 @@
     "stylus-loader": "^3.0.2",
     "url-loader": "^1.0.1",
     "webpack": "^4.16.1",
+    "webpack-bundle-analyzer": "^3.3.2",
     "webpack-cli": "^3.1.0",
-    "webpack-merge": "^4.1.2",
-    "webpack-bundle-analyzer": "^3.3.2"
+    "webpack-merge": "^4.1.2"
   }
 }
